syntax = "proto3";

// Language Dependent Statements Start
option java_package = "ericsson.core.nrf.dbproxy.grpc.nfmessage.gpsiprofile";
option java_outer_classname = "GpsiProfileDelRequestProto";
option go_package = "com/dbproxy/nfmessage/gpsiprofile";
package grpc;
// Language Dependent Statements End
import "nfmessage/gpsiprefixprofile/GpsiprefixProfile.proto";

message GpsiProfileDelRequest {
    string gpsi_profile_id = 1; 
    repeated GpsiprefixProfile gpsi_prefix_delete    = 2;
}

